--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".ProfileActivity"/>
         <activity android:name=".SignupActivity"/>
         <activity android:name=".StudentGroupsActivity"/>
+        <activity android:name=".StudentActivity"/>
         <activity android:name=".StudentTasksActivity"/>
     </application>
 
