--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EduEnvi"
@@ -24,20 +23,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ClassroomsActivity"/>
-        <activity android:name=".ClassroomGroupsActivity"/>
-        <activity android:name=".ClassroomStudentsActivity"/>
-        <activity android:name=".ClassroomTasksActivity"/>
-        <activity android:name=".GroupStudentsActivity"/>
-        <activity android:name=".GroupTasksActivity"/>
-        <activity android:name=".ImageGalleryFragment"/>
-        <activity android:name=".LoginActivity"/>
-        <activity android:name=".LoginStudentActivity"/>
-        <activity android:name=".ProfileActivity"/>
-        <activity android:name=".SignupActivity"/>
-        <activity android:name=".StudentGroupsActivity"/>
-        <activity android:name=".StudentActivity"/>
-        <activity android:name=".StudentTasksActivity"/>
+        <activity android:name=".ClassroomsActivity" />
+        <activity android:name=".ClassroomGroupsActivity" />
+        <activity android:name=".ClassroomStudentsActivity" />
+        <activity android:name=".ClassroomTasksActivity" />
+        <activity android:name=".GroupStudentsActivity" />
+        <activity android:name=".GroupTasksActivity" />
+        <activity android:name=".ImageGalleryFragment" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".LoginStudentActivity" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".SignupActivity" />
+        <activity android:name=".StudentGroupsActivity" />
+        <activity android:name=".StudentActivity" />
+        <activity android:name=".StudentTasksActivity" />
+        <activity android:name=".TaskType1CreatingActivity" />
+        <activity android:name=".TaskType1Activity" />
+        <activity android:name=".TaskType2CreatingActivity" />
+        <activity android:name=".TaskType2Activity" />
     </application>
 
 </manifest>
